--- a/wrangler.toml
+++ b/wrangler.toml
@@ -1,5 +1,5 @@
-name = "streaming-bola-pages"
+name = "titikbola-production"
 pages_build_output_dir = ".vercel/output/static"
-compatibility_date = "2024-05-01"
+compatibility_date = "2025-01-01"
 
 compatibility_flags = ["nodejs_compat"]
