--- a/wrangler.toml
+++ b/wrangler.toml
@@ -2,8 +2,11 @@ name = "titikbola-production"
 compatibility_date = "2024-12-01"
 compatibility_flags = ["nodejs_compat"]
 
-# Cloudflare Pages configuration
-build = { command = "npm run build" }
+# Cloudflare Pages build configuration
+pages_build_output_dir = ".vercel/output/static"
+
+[build]
+command = "npm run build"
 
 # Route configuration
 routes = [
