--- a/package.json
+++ b/package.json
@@ -4,7 +4,7 @@
   "private": true,
   "scripts": {
     "dev": "next dev",
-    "build": "next build",
+    "build": "open-next build",
     "start": "next start",
     "lint": "eslint",
     "test:p2p": "node ./scripts/test-p2p-utils.js"
@@ -14,17 +14,17 @@
     "clsx": "^2.1.1",
     "dashjs": "^5.1.0",
     "hls.js": "^1.6.15",
-    "next": "15.5.2",
-    "react": "^18",
-    "react-dom": "^18",
+    "next": "^16.0.7",
+    "open-next": "^3.1.3",
+    "react": "^19.2.1",
+    "react-dom": "^19.2.1",
     "tailwind-merge": "^3.4.0"
   },
   "devDependencies": {
-    "@cloudflare/next-on-pages": "1.13.16",
-    "@tailwindcss/postcss": "^4",
+    "@tailwindcss/postcss": "^4.1.17",
     "babel-plugin-react-compiler": "1.0.0",
     "eslint": "^9",
-    "eslint-config-next": "15.5.2",
-    "tailwindcss": "^4"
+    "eslint-config-next": "^16.0.7",
+    "tailwindcss": "^4.1.17"
   }
 }
