--- a/wrangler.toml
+++ b/wrangler.toml
@@ -5,5 +5,4 @@ pages_build_output_dir = ".vercel/output/static"
 [build]
 command = "npm run build"
 
-[compatibility_flags]
-nodejs_compat = true
+compatibility_flags = ["nodejs_compat"]
