--- a/package.json
+++ b/package.json
@@ -17,17 +17,17 @@
     "clsx": "^2.1.1",
     "dashjs": "^5.1.0",
     "hls.js": "^1.6.15",
-    "next": "15.5.2",
+    "next": "15.5.3",
     "react": "18.3.1",
     "react-dom": "18.3.1",
     "tailwind-merge": "^3.4.0"
   },
   "devDependencies": {
-    "@cloudflare/next-on-pages": "^1.13.16",
     "@tailwindcss/postcss": "^4.1.17",
     "babel-plugin-react-compiler": "1.0.0",
     "eslint": "^9",
     "eslint-config-next": "15.5.2",
+    "open-next": "^3.1.3",
     "tailwindcss": "^4.1.17",
     "wrangler": "^4.53.0"
   }
